# ChangeLog for xfce-base/xfce4-panel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.192 2011/03/29 13:08:47 jer Exp $

  29 Mar 2011; Jeroen Roovers <jer@gentoo.org> xfce4-panel-4.8.2.ebuild:
  Stable for HPPA (bug #358407).

*xfce4-panel-4.8.2-r1 (28 Mar 2011)

  28 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.8.2-r1.ebuild, +files/xfce4-panel-4.8.2-tasklist.patch:
  Backport upstream commit "Tasklist: add button release event to proxy item"
  wrt #360153 by Daniel Gulotta.

  22 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> xfce4-panel-4.8.2.ebuild:
  ppc/ppc64 stable wrt #358407

  22 Mar 2011; Thomas Kahle <tomka@gentoo.org> xfce4-panel-4.8.2.ebuild:
  x86 stable per bug 358407

  21 Mar 2011; Markus Meier <maekke@gentoo.org> xfce4-panel-4.8.2.ebuild:
  arm stable, bug #358407

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  xfce4-panel-4.8.0.ebuild, xfce4-panel-4.8.2.ebuild:
  Fix slot-deps on gnome libs

  13 Mar 2011; Markos Chandras <hwoarang@gentoo.org> xfce4-panel-4.8.2.ebuild:
  Stable on amd64 wrt bug #358407

*xfce4-panel-4.8.2 (26 Feb 2011)

  26 Feb 2011; <angelos@gentoo.org> +xfce4-panel-4.8.2.ebuild:
  Version bump

  16 Feb 2011; Jeremy Olexa <darkside@gentoo.org> xfce4-panel-4.8.1.ebuild:
  remove useless configure option for EAPI4

  14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> xfce4-panel-4.8.0.ebuild:
  alpha/ia64/sparc stable wrt #349053

  05 Feb 2011; Markus Meier <maekke@gentoo.org> xfce4-panel-4.8.0.ebuild:
  arm stable, bug #349053

*xfce4-panel-4.8.1 (30 Jan 2011)

  30 Jan 2011; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.8.1.ebuild:
  Version bump.

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org> xfce4-panel-4.8.0.ebuild:
  Stable for HPPA (bug #349053).

  17 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> xfce4-panel-4.8.0.ebuild:
  ppc/ppc64 stable wrt #349053
